--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
@@ -11,6 +11,7 @@
         <app-form-registrar-novedad-contrato 
                                             [tiposNovedadModificacionContractual]="this.tiposNovedadModificacionContractual"
                                             [novedadDescripcion]="novedad"
+                                            [fechaSolicitudNovedad]="fechaSolicitudNovedad"
                                             [estaEditando]="estaEditando"
                                             (guardar)="guardarRegistro()"
                                             >
