--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -793,6 +793,7 @@
                 <input
                   matInput
                   [matDatepicker]="pickerConceptoTecnico"
+                  [max]="fechaSolicitudNovedad"
                   formControlName="fechaConceptoTecnico"
                   readonly
                   (click)="pickerConceptoTecnico.open()"
