--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/accordion-novedades/accordion-novedades.component.html
@@ -13,6 +13,7 @@
                                             [novedadDescripcion]="novedad"
                                             [fechaSolicitudNovedad]="fechaSolicitudNovedad"
                                             [estaEditando]="estaEditando"
+                                            [fechaSolicitudNovedad]="fechaSolicitudNovedad"
                                             (guardar)="guardarRegistro()"
                                             >
         </app-form-registrar-novedad-contrato>
