--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -796,6 +796,7 @@
                   [max]="fechaSolicitudNovedad"
                   formControlName="fechaConceptoTecnico"
                   readonly
+                  [max]="fechaSolicitudNovedad"
                   (click)="pickerConceptoTecnico.open()"
                   placeholder="DD/MM/AAAA"
                 />
