--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -135,6 +135,7 @@
                   [max]="addressForm.get('fechaSolicitudNovedad').value"
                   formControlName="fechaSesionInstancia"
                   readonly
+                  [max]="addressForm.get('fechaSolicitudNovedad').value"
                   (click)="pickerSesionInstancia.open()"
                   placeholder="DD/MM/AAAA"
                   [disabled]="addressForm.get('instanciaPresentoSolicitud').value == 3"
@@ -235,6 +236,7 @@
     [novedadeContractual]="novedadContractual"
     [fechaSolicitudNovedad]="addressForm.get('fechaSolicitudNovedad').value"
     [estaEditando]="estaEditando"
+    [fechaSolicitudNovedad]="addressForm.get('fechaSolicitudNovedad').value"
     (guardar)="onSubmit()"
   >
   </app-accordion-novedades>
