--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-gestionar-interventoria/expansion-gestionar-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/expansion-gestionar-interventoria/expansion-gestionar-interventoria.component.html
@@ -66,6 +66,7 @@
       </mat-card>
 
       <app-form-perfil  [perfilProyecto]="contratacion.proyecto.contratoPerfil"
+                        [fechaPoliza]="fechaPoliza"
                         [contratoId]="contrato.contratoId"
                         [proyectoId]="contratacion.proyectoId"
                         [tieneEstadoFase1EyD]="contratacion.proyecto['tieneEstadoFase1EyD']"
