--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -312,7 +312,7 @@
                       (perfil.get('fechaAprobacion').invalid && estaEditando)
                     "
                   >
-                    <b>Fecha de aprobación de la totalidad de las hojas de vida</b>
+                    Fecha de aprobación de la totalidad de las hojas de vida
                   </label>
                 </div>
                 <div class="col d-flex">
