--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -8,7 +8,7 @@
             </mat-expansion-panel-header>
             <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                 <mat-card-content style="text-align: left;">
-                    <p><strong>Código de noegocio SIFI para radicación:</strong> 357233</p>
+                    <p><strong>Código de negocio SIFI para radicación:</strong> 357233</p>
                     <p><strong>Valor de la factura:</strong> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </p>
                 </mat-card-content>
             </mat-card>
