--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -165,7 +165,7 @@
           </mat-expansion-panel-header>
           <mat-card class="shipping-card var-main-gris" style="margin-top: 3em">
             <mat-card-content style="text-align: left">
-              <p><strong>Código de noegocio SIFI para radicación:</strong> 357233</p>
+              <p><strong>Código de negocio SIFI para radicación:</strong> 357233</p>
               <div>
                 <p><strong>Tipo de contrato:</strong> Tipo de contrato</p>
                 <p><strong>Valor de la factura:</strong> Valor de la factura</p>
