--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/datos-solicitud-gbftrec/datos-solicitud-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/datos-solicitud-gbftrec/datos-solicitud-gbftrec.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="solicitudPago !== undefined">
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><b>Código de noegocio SIFI para radicación:</b> <i>357233</i></p>
+            <p><b>Código de negocio SIFI para radicación:</b> <i>357233</i></p>
             <p><strong>Tipo de contrato: </strong><em> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </em></p>
             <p><strong>Valor de la factura: </strong><em> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </em></p>
         </mat-card-content>
