--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/datos-solicitud-rlc/datos-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/datos-solicitud-rlc/datos-solicitud-rlc.component.html
@@ -1,6 +1,6 @@
 <mat-card class="shipping-card var-main-gris">
     <mat-card-content align="left">
-        <p><strong>Código de noegocio SIFI para radicación: </strong><em>357233</em></p>
+        <p><strong>Código de negocio SIFI para radicación: </strong><em>357233</em></p>
         <p><strong>Coordinación responsable: </strong><em>Andina</em></p>
         <p><strong>Grupo de contrato: </strong><em>Grupo 1</em></p>
         <p><strong>Tipo de contrato: </strong><em>Obra</em></p>
