--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
@@ -25,4 +25,4 @@
   </table>
   <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
 </div>
-<app-tabla-fuentes-y-recursos></app-tabla-fuentes-y-recursos>
+<app-tabla-fuentes-y-recursos *ngIf="contratoId" [contratoId]="contratoId"></app-tabla-fuentes-y-recursos>
