--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/acordion-recursos-compro-pagados-gtlc/acordion-recursos-compro-pagados-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/acordion-recursos-compro-pagados-gtlc/acordion-recursos-compro-pagados-gtlc.component.html
@@ -12,16 +12,16 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
             <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
                 <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
-                    {{el.valor}}
+                  ${{ el.valor | currency:' ':'symbol-narrow':'.0-0' }}
                 </div>
             </td>
         </ng-container>
         <ng-container matColumnDef="valorTotalAportantes">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total aportantes </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.valorTotalAportantes}}</b></td>
+            <td mat-cell *matCellDef="let element"> <b>${{ element.valorTotalAportantes | currency:' ':'symbol-narrow':'.0-0' }} </b></td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 </div>
-<app-tabla-fuentes-usos-gtlc></app-tabla-fuentes-usos-gtlc>
+<app-tabla-fuentes-usos-gtlc *ngIf="contratoId" [contratoId]="contratoId"></app-tabla-fuentes-usos-gtlc>
