--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
@@ -25,7 +25,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <app-tabla-ejpresupuestal-gtlc *ngIf="dataTable.length > 0" [data]="dataTable"></app-tabla-ejpresupuestal-gtlc>
+            <app-tabla-ejpresupuestal-gtlc [data]="dataTableEjpresupuestal"></app-tabla-ejpresupuestal-gtlc>
         </mat-card-content>
     </mat-card>
     <mat-card class="shipping-card mainGris" style="margin-top: 3em;">
@@ -35,7 +35,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <app-tabla-ejfinanciera-gtlc></app-tabla-ejfinanciera-gtlc>
+            <app-tabla-ejfinanciera-gtlc [data]="dataTableEjfinanciera"></app-tabla-ejfinanciera-gtlc>
         </mat-card-content>
     </mat-card>
 </section>
