--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-valtotal-og-gtlc/tabla-valtotal-og-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-valtotal-og-gtlc/tabla-valtotal-og-gtlc.component.html
@@ -2,7 +2,7 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="numOrdenGiro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> <b>{{ element.numOrdenGiro }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> <b>{{ element.numeroOrdenGiro }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="contratista">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
@@ -18,7 +18,7 @@
         </ng-container>
         <ng-container matColumnDef="reteGarantiaAPagar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rete garantía a pagar </th>
-            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> {{ element.reteGarantiaAPagar }} </td>
+            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> {{ element.reteGarantia }} </td>
         </ng-container>
         <ng-container matColumnDef="otrosDescuentos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Otros descuentos </th>
@@ -26,7 +26,7 @@
         </ng-container>
         <ng-container matColumnDef="aPagarAntesImpuestos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> A pagar antes de impuestos </th>
-            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> {{ element.aPagarAntesImpuestos }} </td>
+            <td mat-cell *matCellDef="let element" align="center" style="color: #474747;"> {{ element.apagarAntesImpuestos }} </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
