--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-contratistas/detalle-contratistas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-contratistas/detalle-contratistas.component.html
@@ -8,6 +8,6 @@
       <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
       <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
       <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion}}</em></p>
-      <p><strong>Valor pagado: </strong><em></em></p>
+      <p><strong>Valor pagado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
   </mat-card-content>
 </mat-card>
