--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-fuentes-y-recursos/tabla-fuentes-y-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-fuentes-y-recursos/tabla-fuentes-y-recursos.component.html
@@ -1,48 +1,95 @@
-<div class="table-responsive mt-1em mb-2em text-center tabla-gris">
-  <table mat-table [dataSource]="dataSource" matSort>
-    <!-- aportante Column -->
-    <ng-container matColumnDef="aportante">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Aportante
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <b>{{ element.aportante }}</b>
-      </td>
-    </ng-container>
+<mat-card class="shipping-card mainGris" style="margin-top: 3em">
+  <mat-card-header class="header-card header-card--margin">
+    <mat-card-title class="header-card--text textoGris"> Fuentes y usos </mat-card-title>
+  </mat-card-header>
+  <mat-card-content style="text-align: left">
 
-    <!-- valorAportante Column -->
-    <ng-container matColumnDef="valorAportante">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor aportante
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.valorAportante }}</td>
-    </ng-container>
+    <section class="d-flex justify-content-center table-responsive tabla-gris mt-3em">
+      <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
+        <ng-container matColumnDef="uso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%">Uso</th>
+          <td mat-cell *matCellDef="let element; index as i" align="center">{{ element.nombreUso }}</td>
+        </ng-container>
 
-    <!-- fuente Column -->
-    <ng-container matColumnDef="fuente">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor total aportantes
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.fuente }}</td>
-    </ng-container>
+        <ng-container matColumnDef="fuente">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%">Fuente</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.fuentes; let i = index"
+            >
+              {{ el.nombreFuente }}
+            </div>
+          </td>
+        </ng-container>
 
-    <!-- uso Column -->
-    <ng-container matColumnDef="uso">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor total aportantes
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.uso }}</td>
-    </ng-container>
+        <ng-container matColumnDef="aportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%">
+            Aportante
+          </th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.aportante; let i = index"
+            >
+              {{ el.nombreAportante }}
+            </div>
+          </td>
+        </ng-container>
 
-    <!-- valorUso Column -->
-    <ng-container matColumnDef="valorUso">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor total aportantes
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.valorUso }}</td>
-    </ng-container>
+        <ng-container matColumnDef="valorUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%">Valor de Uso</th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.valorUso; let i = index"
+            >
+              ${{ el }}
+            </div>
+          </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-</div>
+        <ng-container matColumnDef="saldoActualUso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%">
+            Saldo actual de uso
+          </th>
+          <td
+            mat-cell
+            *matCellDef="let element"
+            align="center"
+            class="color-text"
+            class="padding-0em border-color-detalle"
+          >
+            <div
+              class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"
+              *ngFor="let el of element.saldoActualUso; let i = index"
+            >
+              ${{ el }}
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </section>
+  </mat-card-content>
+</mat-card>
