--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-total-ordenes-de-giro/tabla-total-ordenes-de-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-total-ordenes-de-giro/tabla-total-ordenes-de-giro.component.html
@@ -2,7 +2,7 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="numOrdenGiro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b *ngIf="element.ordenGiro != null">{{ element.ordenGiro.numeroSolicitud }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numeroOrdenGiro }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="contratista">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
@@ -18,7 +18,7 @@
         </ng-container>
         <ng-container matColumnDef="reteGarantiaAPagar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rete garantía a pagar </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantiaAPagar }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantia }} </td>
         </ng-container>
         <ng-container matColumnDef="otrosDescuentos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Otros descuentos </th>
@@ -26,12 +26,12 @@
         </ng-container>
         <ng-container matColumnDef="aPagarAntesImpuestos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> A pagar antes de impuestos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.aPagarAntesImpuestos }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.apagarAntesImpuestos }} </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.solicitudPagoId)">
+                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.solicitudId)">
                     Ver detalle
                 </button>
             </td>
