--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -308,7 +308,8 @@
                       matInput
                       [matDatepicker]="fechaAprobacion"
                       formControlName="fechaAprobacion"
-                      [min]="minDate"
+                      [min]="fechaAprobacionPoliza"
+                      [max]="minDate"
                       placeholder="DD/MM/AAAA"
                       required
                       readonly
