--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -183,6 +183,7 @@
             <quill-editor class="quill-editor-style"
                           [styles]="editorStyle"
                           [modules]="config"
+                          required
                           #observaciones
                           (onContentChanged)="maxLength($event, 2000)"
                           formControlName="observacionesGenerales">
