--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -55,6 +55,7 @@
                                 <input  matInput
                                         type="text"
                                         maxlength="1"
+                                        [max]="tipoActividades.length"
                                         formControlName="cantidadActividad"
                                         (ngModelChange)="valuePending( $event )"
                                         required>
