--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/expansion-gestionar-requisitos/expansion-gestionar-requisitos.component.html
@@ -72,6 +72,7 @@
 			<app-form-perfil 	[perfilProyecto]="contratacion.proyecto.contratoPerfil"
 												[contratoId]="contrato.contratoId"
 												[proyectoId]="contratacion.proyectoId"
+												[fechaAprobacionPoliza]="contrato.fechaAprobacionPoliza"
 												(perfilEliminado)="getContrato( $event )"
 												(enviarPerfilesContrato)="getPerfilesContrato( i, $event )"
 												(perfilesCompletados)="estadoSemaforo( i, $event )">
